force-app/main/default/objects/Daily_Delivery_Summary__c/Daily_Delivery_Summary__c.object-meta.xml
<CustomObject>
    <description>Daily Delivery Summary objetc to display &apos;Daily Delivery Summary&apos;</description>
    <label>Daily Delivery Summary</label>
    <nameField>
        <label>Daily Delivery Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Delivery Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>