force-app/main/default/objects/Daily_Delivery_Summary__c/fields/Deivery_Site__c.field-meta.xml
<CustomField>
    <fullName>Deivery_Site__c</fullName>
    <description>Deivery Site</description>
    <label>Deivery Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>