force-app/main/default/objects/Daily_Delivery_Summary__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Delivery Date</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>