force-app/main/default/objects/Daily_Delivery_Summary__c/fields/Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Ticket_No__c</fullName>
    <description>Ticket No</description>
    <label>Ticket No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>