force-app/main/default/objects/Daily_Delivery_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Ticket_No__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Deivery_Site__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>